# Technopark_CPlusPlus

./: .gitignore  README.md
Homework1CMake/: CMakeLists.txt
Homework1CMake/Homework1CMake/: CMakeLists.txt  Homework1CMake.cpp
Homework1CMake/Homework1CMake/include/: FileReader.h  StatisticsWorker.h
Homework1CMake/Homework1CMake/src/: FileReader.cpp  StatisticsWorker.cpp
Homework2/: CMakeLists.txt
Homework2/Homework2/: CMakeLists.txt  Homework2.cpp
Homework2/Homework2/include/: Addition.h  Arccos.h  Arcsin.h  Calculator.h  ICalculatable.h  Multiplication.h  Number.h  Subtraction.h
Homework2/Homework2/src/: Calculator.cpp
homework_1/: homework_1.sln
homework_1/homework_1/: FileReader.cpp  FileReader.h  StatisticsWorker.cpp  StatisticsWorker.h  homework_1.cpp  homework_1.vcxproj  homework_1.vcxproj.filters
homework_1/homework_1/x64/Debug/: filereader.obj.enc  homework_1.exe.recipe  homework_1.ilk  vc143.idb
homework_1/homework_1/x64/Debug/homework_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  homework_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
